[tool.poetry]
name = "repl_nix_Link-Bypasser-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
cfscrape = "^2.1.1"
cloudscraper = "^1.2.71"
Flask = "^2.3.2"
lk21 = "^1.6.0"
beautifulsoup4 = "^4.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
